Push final - va pup

--- a/APINet.Shared/APINet.Shared.csproj
+++ b/APINet.Shared/APINet.Shared.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<!-- <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -8,5 +8,20 @@
     
     <PostBuildEvent>xcopy "D:\YourGame\APINet.Shared\bin\Debug\netstandard2.1\APINet.Shared.dll" "D:\YourGame\ProiectIS2\Assets\DLLs" /Y /I</PostBuildEvent>
   </PropertyGroup>
+
+</Project> -->
+
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <LangVersion>10.0</LangVersion> 
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
+
+  <Target Name="CopyDLLToUnity" AfterTargets="Build" Condition="'$(OS)' == 'Windows_NT'">
+    <Exec Command="xcopy &quot;D:\YourGame\APINet.Shared\bin\Debug\netstandard2.1\APINet.Shared.dll&quot; &quot;D:\YourGame\ProiectIS2\Assets\DLLs&quot; /Y /I" />
+  </Target>
 
 </Project>
